# belgium_weather_stats_cli

./: .gitignore  README.md  pyproject.toml  weather_stats.py
